# redis-from-scratch

./: README.md  pyproject.toml
app/: data.py  exceptions.py  main.py  redis_command_parser.py  redis_server.py
