[project]
name = "redis-from-scratch"
version = "0.1.0"
description = "An attempt to create redis like data server from scratch."
authors = [
    {name = "fahadmirza8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=24.10.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
